<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/setting_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:padding="4dp"
            android:src="@drawable/svg_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:background="@color/black"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/grey"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/icon_logo" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/setting_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:text="version: 1.0"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/relayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_vibrator"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="1dp"
            android:layout_toStartOf="@id/sw_vibrator"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setting_vibration"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/setting_vibration_context"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_vibrator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/layout_vibrator"
            android:layout_alignBottom="@id/layout_vibrator"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/layout_vibrator"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/layout_gesture"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@id/view"
            android:layout_marginStart="25dp"
            android:layout_toStartOf="@id/spinner"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setting_gesture"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/setting_gesture_context"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <!--        <androidx.appcompat.widget.SwitchCompat-->
        <!--            android:id="@+id/sw_gesture"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_alignTop="@id/layout_gesture"-->
        <!--            android:layout_alignBottom="@id/layout_gesture"-->
        <!--            android:layout_alignParentEnd="true"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            android:layout_marginEnd="25dp" />-->

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/layout_gesture"
            android:layout_alignBottom="@id/layout_gesture"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>